<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inputdataguru.InputData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_kembali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_arrow_back_24" />
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_absen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/input"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Input data anda dengan benar, agar dapat mengetahui siapa diri anda."
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/nip"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/nip"
            android:inputType="textCapSentences"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/nama"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/nama"
            android:inputType="textCapSentences"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Jenis Kelamin"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:entries="@array/kelamin"
            android:fontFamily="@font/poppins_medium"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/tempat_lahir"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/t_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/tempat_lahir"
            android:inputType="textCapSentences"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/tanggal_lahir"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tgl_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/tanggal_lahir"
            android:inputType="date"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/agama"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/agama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:entries="@array/agama"
            android:fontFamily="@font/poppins_medium"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/pendidikan"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/pendidikan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:entries="@array/pendidikan"
            android:fontFamily="@font/poppins_medium"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/jabatan"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/jabatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/jabatan"
            android:inputType="textCapSentences"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/status_kepegawaian"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/status_kepegawaian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/status_kepegawaian"
            android:inputType="textCapSentences"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/mapel"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/mapel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/mapel"
            android:inputType="textCapSentences"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sertifikasi"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sertifikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:entries="@array/sertifikasi"
            android:fontFamily="@font/poppins_medium"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/alamat"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input_text"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/alamat"
            android:layout_marginBottom="30dp"
            android:lines="2"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btn_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/ProgressBarStyle"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_simpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/simpan"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>